# src/routes.ts
@@ -1,17 +1,16 @@
 import {Router} from "express";
 import ContractAnalysis from "./contractAnalysis/controller";
-import ContractDescription from "./contractDescription/controller";
-import {contractAndChain, transaction} from "./validators";
+import {contractAndChain, history, transaction} from "./validators";
 
 
 const router = Router();
 
 const analyzeController = new ContractAnalysis();
-const descriptionController = new ContractDescription();
 
 router.post('/contract/analyze', contractAndChain, analyzeController.contractAnalysis);
-router.post('/contract/description', contractAndChain, descriptionController.getContractDescription);
 router.post('/contract/info', contractAndChain, analyzeController.contractInfo);
 router.post('/transaction/analyze', transaction, analyzeController.transactionAnalysis);
+
+router.post('/history', history, analyzeController.getPromptHistory);
 
 export default router;
